# market-surveillance

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: PROJECT_BRIEF.md
scripts/: run_phase1.py  run_phase2.py  run_phase3.py
src/surveillance/: __init__.py  app.py
src/surveillance/detection/: __init__.py  analysis.py  curves.py  evaluate.py  ml.py  rules.py
src/surveillance/features/: __init__.py  account_features.py  windows.py
src/surveillance/generator/: __init__.py  dataset.py  events.py  injectors.py  normal_flow.py  orderbook.py  sim.py
tests/: test_analysis.py  test_detection.py  test_generator.py  test_ml.py  test_orderbook.py
