[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "market-surveillance"
version = "0.1.0"
description = "이상거래 탐지(시장감시) 엔진 — 합성 데이터 기반 시세조종 탐지"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
